--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress run --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "pinia": "^2.0.14",
@@ -18,7 +20,15 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
     "@rushstack/eslint-patch": "^1.1.0",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-vite": "^0.1.38",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue3": "^6.5.9",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.41",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -26,6 +36,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "babel-loader": "^8.2.5",
     "cypress": "^10.1.0",
     "eslint": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -37,6 +48,7 @@
     "typescript": "~4.7.4",
     "vite": "^2.9.12",
     "vitest": "^0.15.1",
+    "vue-loader": "^16.8.3",
     "vue-tsc": "^0.38.1"
   }
 }
