--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.app.json",
-  "exclude": [],
+  "exclude": ["src/**/__tests__/*", "**/*.stories.ts"],
   "compilerOptions": {
     "composite": true,
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["node", "jsdom", "vite/client"]
   }
 }
