--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
+    "test:coverage": "vitest run --coverage ",
     "test:e2e": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress open --e2e'",
     "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress run --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=57adc7df3156"
   },
   "dependencies": {
     "pinia": "^2.0.14",
@@ -39,20 +41,25 @@
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.7.0",
     "cypress": "^10.1.0",
     "eslint": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.0.0",
+    "happy-dom": "^6.0.2",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
+    "storybook-addon-designs": "^6.3.1",
     "tailwindcss": "^3.1.4",
     "typescript": "~4.7.4",
-    "vite": "^2.9.12",
-    "vitest": "^0.15.1",
+    "vite": "^2.9.13",
+    "vitest": "^0.17.1",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.38.1"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "payment-panel@0.0.0"
 }
