--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-  "exclude": ["src/**/__tests__/*"],
+  "exclude": ["src/**/__tests__/*", "**/*.stories.ts"],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
@@ -9,6 +9,8 @@
       "@/*": ["./src/*"]
     },
     "jsx": "preserve",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "allowJs": true,
+    "types": ["vite/client"]
   }
 }
